euphony-dsp/src/snapshots/euphony_dsp__math__Add.snap
---
source: euphony-dsp/src/math.rs
expression: node
---
Node {
    name: "Add",
    module: None,
    impl_path: "euphony_dsp::math",
    id: 200,
    inputs: [
        Input {
            name: "a",
            id: 0,
            trigger: false,
            default: 0.0,
        },
        Input {
            name: "b",
            id: 1,
            trigger: false,
            default: 0.0,
        },
    ],
    docs: " Adds two signals together\n",
}
