euphony-dsp/src/snapshots/euphony_dsp__math__Mul.snap
---
source: euphony-dsp/src/math.rs
expression: node
---
Node {
    name: "Mul",
    module: None,
    impl_path: "euphony_dsp::math",
    id: 201,
    inputs: [
        Input {
            name: "a",
            id: 0,
            trigger: false,
            default: 0.0,
        },
        Input {
            name: "b",
            id: 1,
            trigger: false,
            default: 0.0,
        },
    ],
    docs: " Multiplies two signals together\n",
}
